--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "pretest": "npm install",
-    "test": "mocha ./index.spec.js || :"
+    "test": "mocha index.spec.js || :"
   },
   "repository": {
     "type": "git",
