--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "pretest": "npm install",
-    "test": "mocha index.spec.js || :"
+    "pretest": "npm install && node util.js",
+    "test": "mocha test/index.spec.js || :",
+    "posttest": "rm -rf ./test ./node_modules"
   },
   "repository": {
     "type": "git",
